--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,23 @@
 @import 'tailwindcss';
+
+@layer base {
+	h1 {
+		@apply scroll-m-20 text-3xl tracking-tight lg:text-4xl;
+	}
+
+	h2 {
+		@apply scroll-m-20 text-2xl tracking-tight lg:text-3xl;
+	}
+
+	h3 {
+		@apply scroll-m-20 text-xl tracking-tight lg:text-2xl;
+	}
+
+	h4 {
+		@apply scroll-m-20 text-lg tracking-tight lg:text-xl;
+	}
+
+	p {
+		@apply leading-normal [&:not(:first-child)]:mt-4;
+	}
+}
